--- a/frontend/vfs/src/App.css
+++ b/frontend/vfs/src/App.css
@@ -1,38 +1,40 @@
 .App {
   text-align: center;
+  background-color: #9CA3AF; /* Adjust the background to match your design */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App-main {
+  padding: 20px;
+  max-width: 800px; /* Adjust as needed */
+  margin: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+  background-color: #61dafb;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  margin-top: 20px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button:hover {
+  background-color: #21a1f1;
 }
 
-.App-link {
-  color: #61dafb;
+button:disabled {
+  background-color: #ccc;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type="file"] {
+  margin-top: 20px;
+}
+
+video {
+  margin-top: 20px;
+  max-width: 90%;
+  border: 2px solid #61dafb;
+  border-radius: 4px;
 }
